2008-01-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/Checkout.cs,
	  MonoDevelop.VersionControl/Publish.cs,
	  MonoDevelop.VersionControl/VersionControlService.cs: If there isn't any
	  supported version control system installed, show a message saying that,
	  instead of showing a Select Repository dialog with an empty combo. Fixes
	  bug #344841.
	* MonoDevelop.VersionControl.Dialogs/EditRepositoryDialog.cs: Select the
	  first vcs type by default.

2008-01-07  Andreia Gaita <avidigal@novell.com>

	* MonoDevelop.VersionControl.Views/Diffs.cs: Change the diff algorithm
	call to have case-sensitive diffs.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.mdp: Updated project files. The order of
	  extended properties won't change anymore.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Views/Diffs.cs,
	  MonoDevelop.VersionControl.Views/CellRendererDiff.cs,
	  MonoDevelop.VersionControl.Views/Logs.cs: Moved PlatformService to
	  MD.Core.Gui. Removed old FileIconService class, which is now implemented
	  in PlatformService.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.mdp,
	  MonoDevelop.VersionControl.Dialogs/SelectRepositoryDialog.cs,
	  MonoDevelop.VersionControl.Dialogs/EditRepositoryDialog.cs,
	  MonoDevelop.VersionControl.Dialogs/CommitDialog.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
	  gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
	  gtk-gui/gui.stetic, MonoDevelop.VersionControl.Views/Diffs.cs,
	  MonoDevelop.VersionControl.Views/Statuses.cs,
	  MonoDevelop.VersionControl.Views/Logs.cs, Makefile.am,
	  MonoDevelop.VersionControl/Update.cs,
	  MonoDevelop.VersionControl/CommitCommand.cs,
	  MonoDevelop.VersionControl/VersionControlFileSystemExtension.cs,